// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should return content from else 1`] = `
<div>
  else
</div>
`;

exports[`should return content from else 2`] = `
<div>
  else
</div>
`;

exports[`should return content from else 3`] = `
<div>
  else
</div>
`;

exports[`should return content from else 4`] = `
<div>
  else
</div>
`;

exports[`should return content from if 1`] = `
<div>
  if
</div>
`;

exports[`should return content from if 2`] = `
<div>
  if
</div>
`;

exports[`should return content from if 3`] = `
<div>
  if
</div>
`;

exports[`should return content from if 4`] = `
<div>
  if
</div>
`;
